Display the connection failure as an error message in ConnectForm. All other errors are designated with a red border only.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -473,6 +473,7 @@
   "no-blocking": "No blocking.",
   "node-name-not-exists": "No node with such name exist.",
   "node-settings-changed-conflict": "Blog settings were changed by somebody.",
+  "node-url-not-found": "Node URL not found",
   "no-kick": "Do not kick",
   "no-name-known": "no name known",
   "no-notifications": "No notifications",
