Password revealing button for all password inputs.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -302,6 +302,7 @@
   "hide-in-discussions": "Ukryj w dyskusjach",
   "hide-in-google-play": "Ukryj w Androidzie (Google Play)",
   "hide-my-subscription": "Ukryj moją subskrypcję",
+  "hide-password": "Ukryj hasło",
   "hide-post-google-play": "Nie pokazuj posta \"{heading}\" w Androidzie (Google Play).",
   "hide-subscription-to-me": "Ukryj subskrypcję do mnie",
   "horizontal-line": "Linia pozioma",
@@ -947,6 +948,7 @@
   "show-list-reactions": "Pokaż szczegółową listę reakcji",
   "show-more-results": "Pokaż więcej wyników",
   "show-number-reactions": "Pokaż liczbę reakcji",
+  "show-password": "Pokaż hasło",
   "signature-correct": "Podpis jest poprawny",
   "signature-incorrect": "Podpis jest niepoprawny",
   "signature-verification-in-progress": "Trwa weryfikacja podpisu",
