--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -302,6 +302,7 @@
   "hide-in-discussions": "Скрыть в обсуждениях",
   "hide-in-google-play": "Скрыть в Android (Google Play)",
   "hide-my-subscription": "Скрыть мою подписку",
+  "hide-password": "Скрыть пароль",
   "hide-post-google-play": "Не показывать пост \"{heading}\" в Android (Google Play).",
   "hide-subscription-to-me": "Скрыть подписку на меня",
   "horizontal-line": "Горизонтальная линия",
@@ -947,6 +948,7 @@
   "show-list-reactions": "Показывать список реакций",
   "show-more-results": "Показать ещё результаты",
   "show-number-reactions": "Показывать число реакций",
+  "show-password": "Показать пароль",
   "signature-correct": "Подпись верна",
   "signature-incorrect": "Подпись неверна",
   "signature-verification-in-progress": "Идёт проверка подписи",
