--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -302,6 +302,7 @@
   "hide-in-discussions": "Приховати в обговореннях",
   "hide-in-google-play": "Сховати у Android (Google Play)",
   "hide-my-subscription": "Приховати мою підписку",
+  "hide-password": "Приховати пароль",
   "hide-post-google-play": "Не показувати пост \"{heading}\" у Android (Google Play).",
   "hide-subscription-to-me": "Приховати підписку на мене",
   "horizontal-line": "Горизонтальна лінія",
@@ -947,6 +948,7 @@
   "show-list-reactions": "Показувати список реакцій",
   "show-more-results": "Показати ще результати",
   "show-number-reactions": "Показувати кількість реакцій",
+  "show-password": "Показати пароль",
   "signature-correct": "Підпис вірний",
   "signature-incorrect": "Підпис невірний",
   "signature-verification-in-progress": "Йде перевірка підпису",
