--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -302,6 +302,7 @@
   "hide-in-discussions": "Hide in discussions",
   "hide-in-google-play": "Hide in Android (Google Play)",
   "hide-my-subscription": "Hide my subscription",
+  "hide-password": "Hide password",
   "hide-post-google-play": "Do not show the post \"{heading}\" on Android (Google Play).",
   "hide-subscription-to-me": "Hide subscription to me",
   "horizontal-line": "Horizontal line",
@@ -947,6 +948,7 @@
   "show-list-reactions": "Show the detailed list of reactions",
   "show-more-results": "Show more results",
   "show-number-reactions": "Show the number of reactions",
+  "show-password": "Show password",
   "signature-correct": "Signature is correct",
   "signature-incorrect": "Signature is incorrect",
   "signature-verification-in-progress": "Signature verification in progress",
