ForgotForm moved to ConnectPage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -267,7 +267,6 @@
   "forget": "Forget",
   "forget-changes": "Do you really want to forget the changes?",
   "forget-unfinished-comment": "Do you really want to forget the unfinished comment?",
-  "forgot-home-password": "Forgot Home Password",
   "forgot-password": "Forgot password?",
   "formula": "Formula",
   "friend": "Friend",
@@ -520,6 +519,7 @@
   "password-changed": "Password changed",
   "password-incorrect": "Password is incorrect",
   "password-not-set": "Password not set yet",
+  "password-recovery": "Password recovery",
   "passwords-different": "Passwords are different",
   "paste-with-formatting": "Paste text with formatting",
   "people": "People",
@@ -610,7 +610,6 @@
   "read-and-agree-with": "I read and agree with",
   "read-more": "Read more...",
   "reason": "Reason",
-  "received-mail": "Received the mail already",
   "recommendations": "Recommendations",
   "recommendation-settings-updated": "Recommendation settings updated",
   "recommended-post": "Recommended",
@@ -633,7 +632,7 @@
   "reset": "Reset",
   "reset-password": "Reset Password",
   "reset-password-hint-instructions": "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
-  "reset-password-instructions": "To reset the password, please enter the name or the URL of your blog.",
+  "reset-password-instructions": "Forgot your password? No worries!<br>\nJust enter the name of your blog and we will guide you through resetting the password securely.",
   "reset-to-default": "Reset to default",
   "reset-token-expired": "Secret code is expired",
   "returned-to-beginning": "You've returned to the beginning",
