--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -267,7 +267,6 @@
   "forget": "Zapomnij",
   "forget-changes": "Czy na pewno chcesz zapomnieć o zmianach?",
   "forget-unfinished-comment": "Czy na pewno chcesz zapomnieć o niedokończonym komentarzu?",
-  "forgot-home-password": "Zapomniałem hasła do domu",
   "forgot-password": "Zapomniałem hasła?",
   "formula": "Formuła",
   "friend": "Znajomyj",
@@ -520,6 +519,7 @@
   "password-changed": "Hasło zmienione",
   "password-incorrect": "Nieprawidłowe hasło",
   "password-not-set": "Hasło nie zostało jeszcze ustawione",
+  "password-recovery": "Odzyskiwanie hasła",
   "passwords-different": "Hasła są różne",
   "paste-with-formatting": "Wklej tekst z formatowaniem",
   "people": "Ludzie",
@@ -610,7 +610,6 @@
   "read-and-agree-with": "Przeczytałem/am i zgadzam się z",
   "read-more": "Czytaj więcej...",
   "reason": "Powód",
-  "received-mail": "Otrzymano już maila",
   "recommendations": "Rekomendacje",
   "recommendation-settings-updated": "Ustawienia rekomendacji zaktualizowane",
   "recommended-post": "Rekomendacja",
@@ -633,7 +632,7 @@
   "reset": "Resetuj",
   "reset-password": "Zresetuj hasło",
   "reset-password-hint-instructions": "Wiadomość została wysłana na Twój adres e-mail <b>{emailHint}</b> z kodem potrzebnym do zresetowania hasła. Proszę wprowadź go w polu poniżej.",
-  "reset-password-instructions": "Aby zresetować hasło, wprowadź nazwę lub adres URL swojego bloga.",
+  "reset-password-instructions": "Zapomniałeś hasła? Nie martw się!<br>\nWpisz nazwę swojego bloga, a my przeprowadzimy Cię przez proces bezpiecznego resetowania hasła.",
   "reset-to-default": "Przywróć domyślne",
   "reset-token-expired": "Kod jest przeterminowany",
   "returned-to-beginning": "Wróciłeś na początek",
