--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -267,7 +267,6 @@
   "forget": "Забыть",
   "forget-changes": "Вы действительно хотите забыть изменения?",
   "forget-unfinished-comment": "Вы действительно хотите забыть незавершенный комментарий?",
-  "forgot-home-password": "Забыл домашний пароль",
   "forgot-password": "Забыли пароль?",
   "formula": "Формула",
   "friend": "Друг",
@@ -520,6 +519,7 @@
   "password-changed": "Пароль изменён",
   "password-incorrect": "Неверный пароль",
   "password-not-set": "Пароль ещё не установлен",
+  "password-recovery": "Восстановление пароля",
   "passwords-different": "Пароли различаются",
   "paste-with-formatting": "Вставить текст с форматированием",
   "people": "Люди",
@@ -610,7 +610,6 @@
   "read-and-agree-with": "Я прочёл и согласен с",
   "read-more": "Читать дальше...",
   "reason": "Причина",
-  "received-mail": "Уже получил письмо",
   "recommendations": "Рекомендации",
   "recommendation-settings-updated": "Настройки рекомендаций обновлены",
   "recommended-post": "Рекомендация",
@@ -633,7 +632,7 @@
   "reset": "Сбросить",
   "reset-password": "Сброс пароля",
   "reset-password-hint-instructions": "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
-  "reset-password-instructions": "Чтобы сбросить пароль, пожалуйста, введите имя или URL вашего блога.",
+  "reset-password-instructions": "Забыли пароль? Не беспокойтесь!<br>\nПросто введите имя вашего блога, и мы поможем вам безопасно сбросить пароль.",
   "reset-to-default": "Вернуть значение по умолчанию",
   "reset-token-expired": "Секретный код устарел",
   "returned-to-beginning": "Вы вернулись в начало",
