--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -267,7 +267,6 @@
   "forget": "Забути",
   "forget-changes": "Ви дійсно бажаєте забути зміни?",
   "forget-unfinished-comment": "Ви дійсно бажаєте забути незавершений коментар?",
-  "forgot-home-password": "Забув домашній пароль",
   "forgot-password": "Забули пароль?",
   "formula": "Формула",
   "friend": "Друг",
@@ -520,6 +519,7 @@
   "password-changed": "Пароль змінений",
   "password-incorrect": "Невірний пароль",
   "password-not-set": "Пароль ще не встановлений",
+  "password-recovery": "Відновлення пароля",
   "passwords-different": "Паролі відмінні",
   "paste-with-formatting": "Вставити текст із форматуванням",
   "people": "Люди",
@@ -610,7 +610,6 @@
   "read-and-agree-with": "Я прочитав і погоджуюсь з",
   "read-more": "Читати далі...",
   "reason": "Причина",
-  "received-mail": "Вже отримав листа",
   "recommendations": "Рекомендації",
   "recommendation-settings-updated": "Налаштування рекомендацій оновлено",
   "recommended-post": "Рекомендація",
@@ -633,7 +632,7 @@
   "reset": "Скинути",
   "reset-password": "Скидання пароля",
   "reset-password-hint-instructions": "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
-  "reset-password-instructions": "Щоб скинути пароль, будь ласка, введіть ім'я або URL вашого блогу.",
+  "reset-password-instructions": "Забули пароль? Не хвилюйтесь!<br>\nПросто введіть ім'я вашого блогу, і ми допоможемо вам безпечно скинути пароль.",
   "reset-to-default": "Повернути значення за замовчуванням",
   "reset-token-expired": "Секретний код застарів",
   "returned-to-beginning": "Ви повернулися до початку",
