Verification of the password reset token.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -235,7 +235,7 @@
   "edit-post-title": "Edit Post",
   "e-mail": "E-mail",
   "email": "E-mail",
-  "email-not-set": "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
+  "email-not-set": "Unfortunately, E-mail address for the blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
   "email-set": "E-mail address set",
   "emoji": "Emoji",
   "empty-feed": "Empty feed",
@@ -244,6 +244,7 @@
   "enable-reactions": "Enable reactions",
   "enter-blog-name": "Enter blog name",
   "enter-name": "Enter name...",
+  "enter-secret-code": "Enter secret code",
   "enter-text-here": "Enter text here...",
   "expand": "Expand ↓",
   "expires": "Expires:",
@@ -399,6 +400,7 @@
     "their-post": "{gender, select, male {his} female {her} other {their}} post",
     "your-post": "your post"
   },
+  "invalid-secret-code": "Invalid secret code",
   "invitation-buttons": "<0>Create a new blog</0><1>or</1><2>Log in</2>",
   "italic": "Italic",
   "i-think-blog-hide": "I think, the blog <b>{name}</b> should be hidden.",
@@ -494,6 +496,7 @@
   "not-matter": "Does not matter",
   "not-now": "Not now",
   "not-publish-my-complaint": "Please, do not publish my complaint",
+  "not-received-email": "Have not receive the e-mail?",
   "not-show-complaints": "Do not show complaints",
   "not-specified": "Not specified",
   "not-subscribed": "Not subscribed",
@@ -631,7 +634,7 @@
   "resend-mail": "Send mail again",
   "reset": "Reset",
   "reset-password": "Reset Password",
-  "reset-password-hint-instructions": "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
+  "reset-password-hint-instructions": "<0>We have sent you an e-mail with a secret code to the address {emailHint}.</0><br><br>Please check your inbox and enter the code you have received in the field below.<br><br>If you don't see the email, remember to check your spam or junk folder.",
   "reset-password-instructions": "Forgot your password? No worries!<br>\nJust enter the name of your blog and we will guide you through resetting the password securely.",
   "reset-to-default": "Reset to default",
   "reset-token-expired": "Secret code is expired",
