--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -244,6 +244,7 @@
   "enable-reactions": "Włącz reakcje",
   "enter-blog-name": "Wpisz nazwę bloga",
   "enter-name": "Wpisz imię...",
+  "enter-secret-code": "Wprowadź kod tajny",
   "enter-text-here": "Wpisz tekst tutaj...",
   "expand": "Rozwiń ↓",
   "expires": "Wygasa:",
@@ -399,6 +400,7 @@
     "their-post": "{gender, select, male {jego} female {jej} other {ich}} post",
     "your-post": "Twój post"
   },
+  "invalid-secret-code": "Nieprawidłowy kod tajny",
   "invitation-buttons": "<0>Utwórz nowy blog</0><1>lub</1><2>Zaloguj się</2>",
   "italic": "Kursywa",
   "i-think-blog-hide": "Uważam, że blog <b>{name}</b> powinien zostać ukryty.",
@@ -494,6 +496,7 @@
   "not-matter": "Nie ma znaczenia",
   "not-now": "Nie teraz",
   "not-publish-my-complaint": "Proszę nie publikować mojej skargi",
+  "not-received-email": "Nie otrzymano e-maila?",
   "not-show-complaints": "Nie pokazuj skarg",
   "not-specified": "Nie określono",
   "not-subscribed": "Nie zasubskrybowano",
@@ -631,7 +634,7 @@
   "resend-mail": "Wyślij maila ponownie",
   "reset": "Resetuj",
   "reset-password": "Zresetuj hasło",
-  "reset-password-hint-instructions": "Wiadomość została wysłana na Twój adres e-mail <b>{emailHint}</b> z kodem potrzebnym do zresetowania hasła. Proszę wprowadź go w polu poniżej.",
+  "reset-password-hint-instructions": "<0>Wysłaliśmy e-mail z tajnym kodem na adres {emailHint}.</0><br><br>Sprawdź swoją skrzynkę odbiorczą i wprowadź otrzymany kod w poniżej zamieszczone pole.<br><br>Jeśli nie widzisz wiadomości, pamiętaj, aby sprawdzić folder spam lub niechciane wiadomości.",
   "reset-password-instructions": "Zapomniałeś hasła? Nie martw się!<br>\nWpisz nazwę swojego bloga, a my przeprowadzimy Cię przez proces bezpiecznego resetowania hasła.",
   "reset-to-default": "Przywróć domyślne",
   "reset-token-expired": "Kod jest przeterminowany",
