--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -244,6 +244,7 @@
   "enable-reactions": "Разрешить реакции",
   "enter-blog-name": "Введите имя блога",
   "enter-name": "Введите имя...",
+  "enter-secret-code": "Введите секретный код",
   "enter-text-here": "Вводите текст тут...",
   "expand": "Развернуть ↓",
   "expires": "Годен до:",
@@ -399,6 +400,7 @@
     "their-post": "свой пост",
     "your-post": "ваш пост"
   },
+  "invalid-secret-code": "Неверный секретный код",
   "invitation-buttons": "<0>Создать новый блог</0><1>или</1><2>Войти</2>",
   "italic": "Курсив",
   "i-think-blog-hide": "Я считаю, что блог <b>{name}</b> следует скрыть.",
@@ -494,6 +496,7 @@
   "not-matter": "Не имеет значения",
   "not-now": "Не сейчас",
   "not-publish-my-complaint": "Пожалуйста, не публикуйте мою жалобу",
+  "not-received-email": "Не получили письмо?",
   "not-show-complaints": "Не показывать жалобы",
   "not-specified": "Не указана",
   "not-subscribed": "Не {gender, select, female {подписан} other {подписана}}",
@@ -631,7 +634,7 @@
   "resend-mail": "Отправить письмо ещё раз",
   "reset": "Сбросить",
   "reset-password": "Сброс пароля",
-  "reset-password-hint-instructions": "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
+  "reset-password-hint-instructions": "<0>Мы отправили вам электронное письмо с секретным кодом на адрес {emailHint}.</0><br><br>Пожалуйста, проверьте ваш ящик и введите код, который вы получили, в поле ниже.<br><br>Если вы не видите письма, не забудьте проверить папку со спамом.",
   "reset-password-instructions": "Забыли пароль? Не беспокойтесь!<br>\nПросто введите имя вашего блога, и мы поможем вам безопасно сбросить пароль.",
   "reset-to-default": "Вернуть значение по умолчанию",
   "reset-token-expired": "Секретный код устарел",
