--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -244,6 +244,7 @@
   "enable-reactions": "Дозволити реакції",
   "enter-blog-name": "Введіть ім'я блога",
   "enter-name": "Введіть ім'я...",
+  "enter-secret-code": "Введіть секретний код",
   "enter-text-here": "Введіть текст тут...",
   "expand": "Розгорнути ↓",
   "expires": "Придатний до:",
@@ -399,6 +400,7 @@
     "their-post": "свій пост",
     "your-post": "ваш пост"
   },
+  "invalid-secret-code": "Невірний секретний код",
   "invitation-buttons": "<0>Створити новий блог</0><1>або</1><2>Увійти</2>",
   "italic": "Курсив",
   "i-think-blog-hide": "Я вважаю, що блог <b>{name}</b> слід приховати.",
@@ -494,6 +496,7 @@
   "not-matter": "Не має значення",
   "not-now": "Не зараз",
   "not-publish-my-complaint": "Будь ласка, не публікуйте мою скаргу",
+  "not-received-email": "Не отримали листа?",
   "not-show-complaints": "Не показувати скарги",
   "not-specified": "Не вказана",
   "not-subscribed": "Не {gender, select, female {підписаний} other {підписана}}",
@@ -631,7 +634,7 @@
   "resend-mail": "Відправити листа ще раз",
   "reset": "Скинути",
   "reset-password": "Скидання пароля",
-  "reset-password-hint-instructions": "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
+  "reset-password-hint-instructions": "<0>Ми надіслали вам електронний лист із секретним кодом на адресу {emailHint}.</0><br><br>Будь ласка, перевірте свою скриньку та введіть код, який ви отримали, у поле нижче.<br><br>Якщо ви не бачите листа, не забудьте перевірити папку зі спамом.",
   "reset-password-instructions": "Забули пароль? Не хвилюйтесь!<br>\nПросто введіть ім'я вашого блогу, і ми допоможемо вам безпечно скинути пароль.",
   "reset-to-default": "Повернути значення за замовчуванням",
   "reset-token-expired": "Секретний код застарів",
