--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -1025,6 +1025,8 @@
   "token-name": "Ім'я токена",
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long": "Занадто довго",
+  "too-many-login-attempts": "Забагато спроб входу. Будь ласка, зачекайте, перш ніж спробувати ще раз.",
+  "too-many-password-reset-attempts": "Забагато спроб скидання пароля. Будь ласка, зачекайте, перш ніж спробувати ще раз.",
   "top": "У кінець",
   "top-50": "Топ 50",
   "total": "Усього",
