--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1025,6 +1025,8 @@
   "token-name": "Имя токена",
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long": "Слишком длинно",
+  "too-many-login-attempts": "Слишком много попыток входа. Пожалуйста, подождите, прежде чем пытаться снова.",
+  "too-many-password-reset-attempts": "Слишком много попыток сброса пароля. Пожалуйста, подождите, прежде чем пытаться снова.",
   "top": "В конец",
   "top-50": "Топ 50",
   "total": "Всего",
