--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -153,6 +153,7 @@
   "create": "Создать",
   "create-avatar": "Создать аватар",
   "created-at": "Создан:",
+  "create-new-password": "Создать новый пароль",
   "create-token": "Создать токен",
   "current": "Текущий",
   "current-password": "Текущий пароль",
@@ -461,6 +462,8 @@
   "new-avatar-new-posts": "Новая аватарка появится только в ваших новых постах и комментариях",
   "new-name-new-posts": "Новое имя появится только в ваших новых постах и комментариях",
   "new-password": "Новый пароль",
+  "new-password-hint-instructions": "Убедитесь, что он содержит не менее 8 символов и содержит цифры, символы, а также строчные и прописные буквы для дополнительной защиты.",
+  "new-password-instructions": "Создайте надежный пароль для защиты вашего аккаунта.",
   "new-post-button": "Написать",
   "new-post-item": "Новый пост",
   "new-posts-newsfeed": "У вас {count, plural, =0 {нет новых постов} =1 {один новый пост} one {# новый пост} few {# новых поста} other {# новых постов}} в ленте новостей",
@@ -524,6 +527,7 @@
   "password-not-set": "Пароль ещё не установлен",
   "password-recovery": "Восстановление пароля",
   "passwords-different": "Пароли различаются",
+  "password-too-short": "Слишком короткий, должен быть минимум 8 символов",
   "paste-with-formatting": "Вставить текст с форматированием",
   "people": "Люди",
   "permissions": "Полномочия",
@@ -698,8 +702,6 @@
   "set-by-admin": "установлено администратором",
   "set-by-post-owner": "установлено автором поста",
   "set-email-provider-contact": "Вам необходимо указать адрес электронной почты в профиле, чтобы провайдер мог связаться с вами при необходимости. Пожалуйста, перейдите в Настройки > Мой профиль и заполните поле \"E-mail\".",
-  "set-home-password": "Установка домашнего пароля",
-  "set-password-and-connect": "Установить пароль и войти",
   "setting": {
     "chapter": {
       "comments": "Комментарии",
