--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -153,6 +153,7 @@
   "create": "Створити",
   "create-avatar": "Створити аватар",
   "created-at": "Створений:",
+  "create-new-password": "Створити новий пароль",
   "create-token": "Створити токен",
   "current": "Поточний",
   "current-password": "Поточний пароль",
@@ -461,6 +462,8 @@
   "new-avatar-new-posts": "Нова аватарка з'явиться лише у ваших нових постах і коментарях",
   "new-name-new-posts": "Нове ім'я з'явиться лише у ваших нових постах і коментарях",
   "new-password": "Новий пароль",
+  "new-password-hint-instructions": "Переконайтеся, що він має щонайменше 8 символів і містить цифри, символи, а також великі та малі літери для додаткового захисту.",
+  "new-password-instructions": "Створіть надійний пароль, щоб забезпечити безпеку вашого акаунту.",
   "new-post-button": "Написати",
   "new-post-item": "Новий пост",
   "new-posts-newsfeed": "У вас {count, plural, =0 {немає нових постів} =1 {є новий пост} one {# новий пост} few {# нових поста} other {# нових постів}} у стрічці новин",
@@ -524,6 +527,7 @@
   "password-not-set": "Пароль ще не встановлений",
   "password-recovery": "Відновлення пароля",
   "passwords-different": "Паролі відмінні",
+  "password-too-short": "Занадто короткий, має бути мінімум 8 символів",
   "paste-with-formatting": "Вставити текст із форматуванням",
   "people": "Люди",
   "permissions": "Повноваження",
@@ -698,8 +702,6 @@
   "set-by-admin": "встановлено адміністратором",
   "set-by-post-owner": "встановлено автором поста",
   "set-email-provider-contact": "Вам потрібно вказати адресу електронної пошти у профілі, щоб провайдер зміг зв'язатись з вами у разі потреби. Будь ласка, перейдіть до Налаштування > Мій профіль та заповніть поле \"E-mail\".",
-  "set-home-password": "Встановлення домашнього пароля",
-  "set-password-and-connect": "Встановити пароль та увійти",
   "setting": {
     "chapter": {
       "comments": "Коментарі",
