Added a tooltip to Blog Name input explaining what names are allowed.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -455,7 +455,7 @@
   "my-profile": "My Profile",
   "name": "Name",
   "name-already-taken": "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
-  "name-help": "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
+  "name-help": "The name must be 4-120 characters long. All characters are allowed, except whitespace and punctuation. Allowed punctuation: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-key": "Name Key",
   "name-not-allowed": "Name is not allowed",
   "name-operation-started": "Name operation started",
