--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -455,7 +455,7 @@
   "my-profile": "Мой профиль",
   "name": "Имя",
   "name-already-taken": "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
-  "name-help": "Имя должно быть длиной от 4 до 120 символов. Вы можете использовать любые символы юникода (включая буквы любого алфавита), кроме пробелов и знаков препинания. Разрешены только такие знаки препинания:",
+  "name-help": "Имя должно быть длиной 4-120 символов. Разрешены все символы, кроме пробелов и знаков препинания. Разрешенные знаки препинания: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-key": "Именной ключ",
   "name-not-allowed": "Недопустимое имя",
   "name-operation-started": "Операция над именем запущена",
