--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -455,7 +455,7 @@
   "my-profile": "Мій профіль",
   "name": "Ім'я",
   "name-already-taken": "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
-  "name-help": "Ім'я має бути довжиною від 4 до 120 символів. Ви можете скористатись будь-якими символами юнікоду (в тому числі літерами будь-якого алфавіту), окрім пробілів та розділових знаків. Дозволені лише такі розділові знаки:",
+  "name-help": "Ім'я повинно містити від 4 до 120 символів. Усі символи дозволені, окрім пробілів та розділових знаків. Дозволені розділові знаки: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-key": "Іменний ключ",
   "name-not-allowed": "Неприпустиме ім'я",
   "name-operation-started": "Операцію над ім'ям запущено",
