--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -455,7 +455,7 @@
   "my-profile": "Mój profil",
   "name": "Nazwa",
   "name-already-taken": "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur_42')",
-  "name-help": "Nazwa musi mieć od 4 do 120 znaków. Możesz używać dowolnego znaku Unicode (w tym niełacińskiego alfabetu), z wyjątkiem białych znaków i interpunkcji. Dozwolona jest tylko ta interpunkcja:",
+  "name-help": "Nazwa musi mieć 4-120 znaków. Dozwolone są wszystkie znaki, z wyjątkiem białych znaków i interpunkcji. Dozwolona interpunkcja: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-key": "Klucz imienny",
   "name-not-allowed": "Nazwa jest niedozwolona",
   "name-operation-started": "Rozpoczęto operację nazwy",
